ESLint and Prettier
Updated to use ESLint and Prettier together to format javascript files.
- ESLint uses the google style base

Fixed home.ejs csrf value from handlebars to ejs variable.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -641,14 +641,16 @@
                 reservation. Thank you!</div>
             </div>
             <div class="text-center"><button type="submit" class="btn-submit">Place Order</button></div>
-            <input type="hidden" name="_csrf" content="{{csrfToken}}">
+            <input type="hidden" name="_csrf" content="<%= csrfToken %>">
           </form>
 
         </div>
 
       </section>
       <!-- End Place an Order Section -->
+
       <div class="place-order-overlay"></div>
+
     </main><!-- End #main -->
 
     <%- include("./partials/footer"); %>
